[tool.poetry]
name = "spectrepy"
version = "0.1.0"
description = "Python bindings for the Spectre Password Manager"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
